2023-12-25T16:11:45Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7322961509 # 2206
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-12-25
* notice: last 14d: unq all: 4 21
* notice: prev accum: outdated-unq outdated-all / unq all: 826 1514 / 839 1536
* notice: next accum: outdated-unq outdated-all / unq all: 827 1515 / 839 1536
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-12-11] / []

2023-12-25T08:12:41Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7320312016 # 2205
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-12-25
* notice: last 14d: unq all: 4 22
* notice: prev accum: outdated-unq outdated-all / unq all: 826 1514 / 838 1535
* notice: next accum: outdated-unq outdated-all / unq all: 826 1514 / 839 1536
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-12-25]

2023-12-24T08:11:20Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7313413620 # 2202
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-12-24
* notice: last 14d: unq all: 3 21
* notice: prev accum: outdated-unq outdated-all / unq all: 826 1514 / 837 1533
* notice: next accum: outdated-unq outdated-all / unq all: 826 1514 / 838 1535
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2023-12-24]

2023-12-21T08:12:41Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7285595307 # 2193