@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-12-25T16:11:45Z",
-  "count_outdated" : 1515,
-  "uniques_outdated" : 827,
+  "timestamp" : "2023-12-26T16:11:42Z",
+  "count_outdated" : 1517,
+  "uniques_outdated" : 828,
   "count" : 1536,
   "uniques" : 839,
   "clones" : [
-    {
-      "timestamp": "2023-12-12T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-12-13T00:00:00Z",
       "count": 2,
