@@ -1,12 +1,7 @@
 {
-  "count": 21,
+  "count": 19,
   "uniques": 4,
   "clones": [
-    {
-      "timestamp": "2023-12-12T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
     {
       "timestamp": "2023-12-13T00:00:00Z",
       "count": 2,
